Сделано псевдоэлемент на текущей ссылке, текст поверх изображений в "Чем мы занимаемся", сделано оверлей в портфолио

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,9 @@ Font nav, mail, phone, hero, button-hero, h2, h3, p, address, email+phone-footer
   --secondary-bg-color: #f5f4fa;
   --primary-fill-color: #afb1b8;
   --network-bg-color: rgba(255, 255, 255, 0.1);
+
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  --duration: 250ms;
 }
 
 body {
@@ -94,6 +97,7 @@ section {
 
 .button.accent {
   color: var(--activ-button-color);
+  position: relative;
 }
 
 .logo {
@@ -139,6 +143,18 @@ section {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--title-text-color);
+}
+
+.button.accent::after {
+  content: '';
+
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 4px;
+  bottom: -2px;
+  background-color: var(--activ-button-color);
+  border-radius: 2px;
 }
 
 .button:hover,
@@ -295,6 +311,8 @@ section {
 }
 
 .work-list .item {
+  position: relative;
+  
   width: calc((100% - 60px) / 3);
   margin-right: 30px;
 }
@@ -302,6 +320,41 @@ section {
 .work-list .item:nth-child(3n) {
   margin-right: 0;
 }
+
+.work-list .item::after {
+  content: '';
+
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 70px;
+  bottom: 3px;
+  background-color: rgba(47, 48, 58, 0.8);
+
+  z-index: 1;
+}
+
+.work-list .item > p {
+  position: absolute;
+  display: block;
+  text-align: center;
+  text-transform: uppercase;
+  
+  width: 100%;
+  height: 16px;
+  bottom: 22px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  
+  color: var(--text-hero-color);
+
+  z-index: 2;
+}
+
 
 /* TEAM */
 
@@ -597,10 +650,12 @@ footer {
 
 .example {
   display: block;
-}
+  }
 
 .example-icon {
+  position: relative;
   display: block;
+  overflow: hidden;
 }
 
 .example-icon:focus,
@@ -638,4 +693,36 @@ footer {
   font-size: 16px;
   line-height: 1.87;
   color: var(--primary-text-color);
+}
+
+.overlay-example {
+position: absolute;
+top: 0;
+left: 0;
+width: 370px;
+height: 294px;
+background-color: rgba(33, 150, 243, 0.9);
+transform: translateY(100%);
+
+transition: transform var(--duration) var(--timing-function);
+}
+
+.overlay-example > p {
+  position: absolute;
+  width: 322px;
+  height: 168px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.56;
+  
+  color: var(--text-hero-color);
+}
+
+.example-icon:focus .overlay-example,
+.example-icon:hover .overlay-example {
+  transform: translateY(0);
 }
