--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,7 @@ p {
 }
 
 header {
-  background-color: #ffffff;
+  background-color: var(--text-hero-color);
 }
 
 .list {
@@ -82,6 +82,64 @@ section {
 .hero-button,
 .button-portfolio {
   cursor: pointer;
+}
+
+/*Модальное окно*/
+.backdrop {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+
+  opacity: 1;
+  transition: opacity var(--duration) var(--timing-function);
+}
+
+.backdrop.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(1.2);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+
+  width: 528px;
+  height: 581px;
+  background-color: var(--text-hero-color);
+
+  transition: transform var(--duration) var(--timing-function);
+}
+
+.button-close {
+  margin-top: 8px;
+  margin-right: 8px;
+  margin-left: auto;
+  padding: 0;
+  border: 0;
+  width: 30px;
+  height: 30px;
+
+  display: flex;
+  
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.icon-close {
+  width: 30px;
+  height: 30px;
+  fill: currentColor;
 }
 
 /* header */
