--- a/css/styles.css
+++ b/css/styles.css
@@ -201,6 +201,8 @@ section {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--title-text-color);
+
+  transition: var(--duration) var(--timing-function);
 }
 
 .button.accent::after {
@@ -226,6 +228,8 @@ section {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
+
+  transition: var(--duration) var(--timing-function);
 }
 
 .envelope {
@@ -498,6 +502,8 @@ section {
 
   border-radius: 50%;
   color: var(--primary-fill-color);
+
+  transition: var(--duration) var(--timing-function);
 }
 
 .icon-link:hover,
@@ -538,6 +544,8 @@ section {
   color: var(--primary-fill-color);
   border-radius: 4px;
   border: 1px solid var(--primary-fill-color);
+
+  transition: var(--duration) var(--timing-function);
 }
 
 .client-link:hover,
@@ -635,6 +643,8 @@ footer {
   border-radius: 50%;
   color: var(--text-hero-color);
   background-color: var(--network-bg-color);
+
+  transition: var(--duration) var(--timing-function);
 }
 
 .network-link-company:hover,
@@ -685,6 +695,8 @@ footer {
   line-height: 1.62;
   text-align: center;
   letter-spacing: 0.03em;
+
+  transition: var(--duration) var(--timing-function);
 }
 
 .button-portfolio:hover,
@@ -714,6 +726,8 @@ footer {
   position: relative;
   display: block;
   overflow: hidden;
+
+  transition: var(--duration) var(--timing-function);
 }
 
 .example-icon:focus,
