--- a/css/styles.css
+++ b/css/styles.css
@@ -95,6 +95,7 @@ section {
   background-color: rgba(0, 0, 0, 0.2);
 
   opacity: 1;
+  transition-property: opacity;
   transition: opacity var(--duration) var(--timing-function);
 }
 
@@ -118,6 +119,7 @@ section {
   height: 581px;
   background-color: var(--text-hero-color);
 
+  transition-property: transform;
   transition: transform var(--duration) var(--timing-function);
 }
 
@@ -202,7 +204,8 @@ section {
   letter-spacing: 0.02em;
   color: var(--title-text-color);
 
-  transition: var(--duration) var(--timing-function);
+  transition-property: color;
+  transition: color var(--duration) var(--timing-function);
 }
 
 .button.accent::after {
@@ -229,7 +232,8 @@ section {
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
 
-  transition: var(--duration) var(--timing-function);
+  transition-property: color;
+  transition: color var(--duration) var(--timing-function);
 }
 
 .envelope {
@@ -503,7 +507,9 @@ section {
   border-radius: 50%;
   color: var(--primary-fill-color);
 
-  transition: var(--duration) var(--timing-function);
+  transition-property: color, background-color;
+  transition: color var(--duration) var(--timing-function), 
+    background-color var(--duration) var(--timing-function);
 }
 
 .icon-link:hover,
@@ -544,8 +550,12 @@ section {
   color: var(--primary-fill-color);
   border-radius: 4px;
   border: 1px solid var(--primary-fill-color);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0));
 
-  transition: var(--duration) var(--timing-function);
+  transition-property: color, border, filter;
+  transition: color var(--duration) var(--timing-function),
+  border var(--duration) var(--timing-function),
+  filter var(--duration) var(--timing-function);
 }
 
 .client-link:hover,
@@ -644,7 +654,8 @@ footer {
   color: var(--text-hero-color);
   background-color: var(--network-bg-color);
 
-  transition: var(--duration) var(--timing-function);
+  transition-property: background-color;
+  transition: background-color var(--duration) var(--timing-function);
 }
 
 .network-link-company:hover,
@@ -696,13 +707,19 @@ footer {
   text-align: center;
   letter-spacing: 0.03em;
 
-  transition: var(--duration) var(--timing-function);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0), 0px 1px 2px rgba(0, 0, 0, 0),
+    0px 2px 2px rgba(0, 0, 0, 0);
+
+  transition-property: background-color, color, box-shadow;
+  transition: background-color var(--duration) var(--timing-function),
+  color var(--duration) var(--timing-function),
+  box-shadow var(--duration) var(--timing-function);
 }
 
 .button-portfolio:hover,
 .button-portfolio:focus {
   background-color: var(--activ-button-color);
-  color: #ffffff;
+  color: var(--text-hero-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
@@ -727,7 +744,11 @@ footer {
   display: block;
   overflow: hidden;
 
-  transition: var(--duration) var(--timing-function);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0), 0px 4px 4px rgba(0, 0, 0, 0),
+  1px 4px 6px rgba(0, 0, 0, 0);
+
+  transition-property: box-shadow;
+  transition: box-shadow var(--duration) var(--timing-function);
 }
 
 .example-icon:focus,
@@ -776,6 +797,7 @@ height: 294px;
 background-color: rgba(33, 150, 243, 0.9);
 transform: translateY(100%);
 
+transition-property: transform;
 transition: transform var(--duration) var(--timing-function);
 }
 
