--- a/css/styles.css
+++ b/css/styles.css
@@ -119,6 +119,9 @@ section {
   height: 581px;
   background-color: var(--text-hero-color);
 
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+
   transition-property: transform;
   transition: transform var(--duration) var(--timing-function);
 }
