--- a/css/styles.css
+++ b/css/styles.css
@@ -743,9 +743,7 @@ footer {
   }
 
 .example-icon {
-  position: relative;
   display: block;
-  overflow: hidden;
 
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0), 0px 4px 4px rgba(0, 0, 0, 0),
   1px 4px 6px rgba(0, 0, 0, 0);
@@ -791,17 +789,22 @@ footer {
   color: var(--primary-text-color);
 }
 
-.overlay-example {
-position: absolute;
-top: 0;
-left: 0;
-width: 370px;
-height: 294px;
-background-color: rgba(33, 150, 243, 0.9);
-transform: translateY(100%);
+.overlay-hidden {
+  position: relative;
+  overflow: hidden;
+}
 
-transition-property: transform;
-transition: transform var(--duration) var(--timing-function);
+.overlay-example {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+  transform: translateY(100%);
+
+  transition-property: transform;
+  transition: transform var(--duration) var(--timing-function);
 }
 
 .overlay-example > p {
